--- a/DynamoDrivenOdometerApp/app/src/main/res/layout/activity_my.xml
+++ b/DynamoDrivenOdometerApp/app/src/main/res/layout/activity_my.xml
@@ -82,4 +82,13 @@
         android:layout_alignParentStart="true"
         android:lines="3" />
 
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/switchPermanentLabel"
+        android:id="@+id/switchPermanent"
+        android:layout_below="@+id/gattConnectedValue"
+        android:layout_alignEnd="@+id/unitValue"
+        android:layout_marginTop="42dp"/>
+
 </RelativeLayout>
