--- a/DynamoDrivenOdometerApp/app/src/main/res/menu/my.xml
+++ b/DynamoDrivenOdometerApp/app/src/main/res/menu/my.xml
@@ -1,10 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_refresh"
-        android:checkable="false"
-        android:orderInCategory="1"
-        android:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_scan"
-        android:title="@string/menuScan"
-        android:orderInCategory="100"
-        android:showAsAction="ifRoom|withText"/>
+          android:title="@string/menuScan"
+          android:orderInCategory="100"
+          android:showAsAction="ifRoom|withText"/>
+    <item android:id="@+id/menu_msg1"
+          android:title="MSG 1"
+          android:orderInCategory="100"
+          android:showAsAction="withText"/>
+    <item android:id="@+id/menu_msg2"
+          android:title="MSG 2"
+          android:orderInCategory="100"
+          android:showAsAction="withText"/>
+    <item android:id="@+id/menu_msg3"
+          android:title="MSG 3"
+          android:orderInCategory="100"
+          android:showAsAction="withText"/>
+    <item android:id="@+id/menu_msg4"
+          android:title="MSG 4"
+          android:orderInCategory="100"
+          android:showAsAction="withText"/>
 </menu>
